--- a/must-have/Переменные.md
+++ b/must-have/Переменные.md
@@ -4,4 +4,4 @@
 
 # Размер переменной, размер типа
 
-# Типы `int`, `char`: типичные размеры. Например, на архитектуре `x86_64` под Linux в компиляторе `GCC`.
+# Типы `int`, `char`: типичные размеры.
