--- a/must-have/Исключения.md
+++ b/must-have/Исключения.md
@@ -1,9 +1,9 @@
-# Синтаксис `try`/`catch`/`throw`, включая `catch (...)` и `throw;` (но без function-try-block)
+## Синтаксис `try`/`catch`/`throw`, включая `catch (...)` и `throw;` (но без function-try-block)
 
-# Раскрутка стека: автоматический вызов деструкторов, в том числе в `new`/`new[]`, конструкторе, конструкторах полей
+## Раскрутка стека: автоматический вызов деструкторов, в том числе в `new`/`new[]`, конструкторе, конструкторах полей
 
-# Необходимость ловить исключения по ссылке
+## Необходимость ловить исключения по ссылке
 
-# exception safety: определения no/basic/strong/nothrow
+## exception safety: определения no/basic/strong/nothrow
 
-# Умение добавить базовую гарантию в произвольный код при помощи автоматических выполняемых деструкторов
+## Умение добавить базовую гарантию в произвольный код при помощи автоматических выполняемых деструкторов
