--- a/must-have/Классы.md
+++ b/must-have/Классы.md
@@ -1,7 +1,7 @@
-# Определение класса, конструктор, деструктор, методы
+## Определение класса, конструктор, деструктор, методы
 
-# Специальные методы (пять штук), правило нуля, правило пяти
+## Специальные методы (пять штук), правило нуля, правило пяти
 
-# Приватные/защищённые/публичные поля и методы
+## Приватные/защищённые/публичные поля и методы
 
-# Наследование: базовый синтаксис, включая вызов конструктора базового класса
+## Наследование: базовый синтаксис, включая вызов конструктора базового класса
