--- a/must-have/Основные_конструкции_С++.md
+++ b/must-have/Основные_конструкции_С++.md
@@ -1,9 +1,9 @@
-# Синтаксис `static_cast`
+## Синтаксис `static_cast`
 
-# Синтаксис объявления пространств имён, обращения к элементу внутри пространства имён
+## Синтаксис объявления пространств имён, обращения к элементу внутри пространства имён
 
-# `auto` для объявления переменных
+## `auto` для объявления переменных
 
-# `range-based for`, в том числе с `auto&` и `const auto&`
+## `range-based for`, в том числе с `auto&` и `const auto&`
 
-# Синтаксис шаблонов, достаточный для написания минимального адаптера `stack<T>` поверх `deque`
+## Синтаксис шаблонов, достаточный для написания минимального адаптера `stack<T>` поверх `deque`
