--- a/must-have/Основные_конструкции_языков.md
+++ b/must-have/Основные_конструкции_языков.md
@@ -1,7 +1,7 @@
-# Объявления переменных
+## Объявления переменных
 
-# Выражения и операторы
+## Выражения и операторы
 
-# Условные операторы `if`, `switch` (с `break` и `fallthrough`, включая проблему с инициализацией переменных)
+## Условные операторы `if`, `switch` (с `break` и `fallthrough`, включая проблему с инициализацией переменных)
 
-# Циклы `for`, `while`
+## Циклы `for`, `while`
