--- a/must-have/Переменные.md
+++ b/must-have/Переменные.md
@@ -1,7 +1,7 @@
-# Статическая типизация
+## Статическая типизация
 
-# Тип переменной
+## Тип переменной
 
-# Размер переменной, размер типа
+## Размер переменной, размер типа
 
-# Типы `int`, `char`: типичные размеры.
+## Типы `int`, `char`: типичные размеры.
