--- a/must-have/Полиморфные_классы.md
+++ b/must-have/Полиморфные_классы.md
@@ -1,11 +1,11 @@
-# Виртуальные методы и их отличия от невиртуальных
+## Виртуальные методы и их отличия от невиртуальных
 
-# Необходимость виртуального деструктора
+## Необходимость виртуального деструктора
 
-# Чисто виртуальные функции, что происходит при отсутствии `override` или `virtual`
+## Чисто виртуальные функции, что происходит при отсутствии `override` или `virtual`
 
-# Slicing (срезка объектов) при присваивании полиморфного класса в переменную типа "базовый класс", как защититься (хранить только ссылки/умные указатели)
+## Slicing (срезка объектов) при присваивании полиморфного класса в переменную типа "базовый класс", как защититься (хранить только ссылки/умные указатели)
 
-# Хранение полиморфных объектов в контейнерах
+## Хранение полиморфных объектов в контейнерах
 
-# `dynamic_cast` для полиморфных классов (по указателям и ссылкам)
+## `dynamic_cast` для полиморфных классов (по указателям и ссылкам)
