--- a/must-have/Си.md
+++ b/must-have/Си.md
@@ -1,6 +1,6 @@
-# Использование строк в стиле Си: отличия `char s[10]` и `const char *s`, хранение в структурах, преобразование с `std::string`
+## Использование строк в стиле Си: отличия `char s[10]` и `const char *s`, хранение в структурах, преобразование с `std::string`
 
-# Операции со строками в стиле Си: конкатенция, получение длины, безопасная альтернатива для `gets` и `scanf("%s")`
+## Операции со строками в стиле Си: конкатенция, получение длины, безопасная альтернатива для `gets` и `scanf("%s")`
 
-# Массивы массивов в языке Си (вроде `int**`): выделение, освобождение, использование
+## Массивы массивов в языке Си (вроде `int**`): выделение, освобождение, использование
 
