--- a/must-have/Функции.md
+++ b/must-have/Функции.md
@@ -1,7 +1,7 @@
-# Объявление и определение функции
+## Объявление и определение функции
 
-# Вызов функции 
+## Вызов функции 
 
-# Возвращаемое значение
+## Возвращаемое значение
 
-# Рекурсивный вызов
+## Рекурсивный вызов
