--- a/must-have/Термины.md
+++ b/must-have/Термины.md
@@ -1,5 +1,21 @@
 ## Свободная функция, функция-член
+`Функция член` - объявлена в классе/структуре и принадлежит классу/структуре
+
+`Свободная функция` - любая функция, которая не является функцией-членом, то есть объявлена вне класса/структуры
 
 ## Время жизни объекта: автоматическое, динамическое, статическое
+`Automatic` - объект автоматически привязан к охватывающей области и будет автоматически уничтожен при выходе из нее
+
+`Dynamic` - время жизни объекта находится под непосредственным контролем пользователя
+
+`Static` - объект начинает жить при запуске программы и заканчивает жить с концом ее работы
 
 ## Undefined behavior: что может произойти, примеры:
+При `UB` поведение программы не предсказуемо. 
+
+Примеры: 
+* обращение за границы массива
+* обращение к неинициализированной переменной
+* ...
+
+То есть делать то, что является ошибкой, но компилятор сходу не может поймать
