--- a/must-have/Переменные.md
+++ b/must-have/Переменные.md
@@ -1,7 +1,15 @@
 ## Статическая типизация
+Язык С++ - статически типизированный язык. То есть тип переменной указывается при ее объявлении и в ходе программы его нельзя изменить. Это позволяет проверять типы данных на этапе компиляции, а не во время выполнения программы
 
 ## Тип переменной
+У каждой переменной есть тип. Он определяет, какие значения может принимать переменная и какие операции с ней разрешены
+
+Примеры типов: `int`, `float`, `double`, `bool`, `std::string`, ...
 
 ## Размер переменной, размер типа
+`Размер переменной` - количество байт, которые она занимает в памяти. Он зависит от типа переменной. При этом на разных архитектурах/компиляторах он тоже может отличаться
+
+Можно использовать оператор `sizeof(type)`, чтобы узнать размер типа `type`. `sizeof expr` возвращает размер типа выражения `expr`, если его можно вычислить
 
 ## Типы `int`, `char`: типичные размеры.
+На архитектуре `x86_64`под Linux в компиляторе `GCC` тип `int` занимает 4 байта, `char` - 1 байт
