--- a/must-have/Основные_конструкции_языков.md
+++ b/must-have/Основные_конструкции_языков.md
@@ -1,6 +1,22 @@
 ## Объявления переменных
+Переменная объявляется вот так - `T name;`, где `T` - тип переменной, `name` - имя переменной. 
+
+Такой statement сообщает компилятору, что `name` - переменная типа `T` и в памяти для нее выделится место
 
 ## Выражения и операторы
+**Арифметические операторы**
+
+`+`, `-`, `*`, `/`, `%`, `+=`, `-=`, `*=`, `/=`, `%=`, `++`, `--` - возвращают объект исходного типа
+
+**Булевы операторы**
+
+`<`, `<=`, `>`, `>=`, `==`, `!=`, `&&`, `||`, `!` - возвращают `true`/`false`
+
+**Отличия постфиксных и префиксных операторов**
+
+`Префиксный` - сначала изменяет значение операнда, а потом возвращает его
+
+`Постфиксный` - сначала возвращает, потом изменяет
 
 ## Условные операторы `if`, `switch` (с `break` и `fallthrough`, включая проблему с инициализацией переменных)
 
