--- a/must-have/Основные_конструкции_языков.md
+++ b/must-have/Основные_конструкции_языков.md
@@ -4,15 +4,15 @@
 Такой statement сообщает компилятору, что `name` - переменная типа `T` и в памяти для нее выделится место
 
 ## Выражения и операторы
-**Арифметические операторы**
+### Арифметические операторы
 
 `+`, `-`, `*`, `/`, `%`, `+=`, `-=`, `*=`, `/=`, `%=`, `++`, `--` - возвращают объект исходного типа
 
-**Булевы операторы**
+### Булевы операторы
 
 `<`, `<=`, `>`, `>=`, `==`, `!=`, `&&`, `||`, `!` - возвращают `true`/`false`
 
-**Отличия постфиксных и префиксных операторов**
+### Отличия постфиксных и префиксных операторов
 
 `Префиксный` - сначала изменяет значение операнда, а потом возвращает его
 
