--- a/must-have/Основные_конструкции_языков.md
+++ b/must-have/Основные_конструкции_языков.md
@@ -19,5 +19,105 @@
 `Постфиксный` - сначала возвращает, потом изменяет
 
 ## Условные операторы `if`, `switch` (с `break` и `fallthrough`, включая проблему с инициализацией переменных)
+**Оператор `if`**
+```
+if (a < b) {
+    a += b;
+} else {
+    a = 0;
+}
+```
+
+**Oператор `switch`**
+```
+switch (x) {
+    case 1:
+        std::cout << "  1\n";
+        break;
+    case 4:
+        std::cout << "  4\n";
+        break;
+    case 2:
+        std::cout << "  2\n";
+        break;
+    default:
+    	std::cout << " default\n";
+    	break;
+}
+```
+* У нас есть несколько кейсов, и в зависимости от значения `x` мы либо перепрыгиваем на соответственный кейс, либо на значение по умолчанию (если есть).
+* Объявлять кейсы можно только констаной (хотя `2 + 2` работает)
+* Важно не забывать про `break` (будут варнинги), так как иначе он будет прыгать (как `goto`) в нужный `case`, а дальше будет заходить в каждый кейс ниже. То есть `break` - перейди в конец `switch`.
+* Для меньшего количества копи-паста можно писать так (работает как `or`):
+  ```
+  case 1:
+  case 10:
+  ```
+* Команда `[[fallthrough]];` как раз отрубает ворнинги из-за отсутствия `break`:
+  ```
+  case 1:
+      std::cout << "  1\n";
+      [[fallthrough]];
+  ```
+* Стилистически лучше писать `default` последним, а кейсы - в алфавитном порядке. В последнем кейсе лучше всегда ставить `break;`
+* **АККУРАТНО С ОБЪЯВЛЕНИЕМ ПЕРЕМЕННЫХ**
+  ```
+  Example 1:
+  switch (x) {
+    case 1:
+        std::cout << "  1\n";
+        break;
+    case 4:
+        std::cout << "  4\n";
+        break;
+    case 2:
+        std::cout << "  2\n";
+        break;
+    default:
+        int wtf1 = 0;
+    	std::cout << " default\n";
+    	break;
+  }
+  
+  Example 2:
+  switch (x) {
+    case 1:
+        std::cout << "  1\n";
+        break;
+    case 4:
+        std::cout << "  4\n";
+        break;
+    case 2:
+        int wtf = 0;
+        std::cout << "  2\n";
+        break;
+    default:
+    	std::cout << " default\n";
+    	break;
+  }
+  ```
+  
+  Компилятор будет ругаться, если переменная объявлена не в последнем кейсе (`Ex 2`), так как мы будем перепрыгивать через них.
+  
+  Чтобы с этим бороться, надо написать фигурные скобки: 
+  ```
+  switch (x) {
+    case 1:
+        std::cout << "  1\n";
+        break;
+    case 4:
+        std::cout << "  4\n";
+        break;
+    case 2:
+    {
+        int wtf = 0;
+        std::cout << "  2\n";
+        break;
+    }
+    default:
+    	std::cout << " default\n";
+    	break;
+  }
+  ```
 
 ## Циклы `for`, `while`
