--- a/must-have/Основные_конструкции_языков.md
+++ b/must-have/Основные_конструкции_языков.md
@@ -29,7 +29,7 @@ if (a < b) {
 ```
 
 **Oператор `switch`**
-```
+```C++
 switch (x) {
     case 1:
         std::cout << "  1\n";
@@ -49,20 +49,20 @@ switch (x) {
 * Объявлять кейсы можно только констаной (хотя `2 + 2` работает)
 * Важно не забывать про `break` (будут варнинги), так как иначе он будет прыгать (как `goto`) в нужный `case`, а дальше будет заходить в каждый кейс ниже. То есть `break` - перейди в конец `switch`.
 * Для меньшего количества копи-паста можно писать так (работает как `or`):
-  ```
+  ```C++
   case 1:
   case 10:
   ```
 * Команда `[[fallthrough]];` как раз отрубает ворнинги из-за отсутствия `break`:
-  ```
+  ```C++
   case 1:
       std::cout << "  1\n";
       [[fallthrough]];
   ```
 * Стилистически лучше писать `default` последним, а кейсы - в алфавитном порядке. В последнем кейсе лучше всегда ставить `break;`
 * **АККУРАТНО С ОБЪЯВЛЕНИЕМ ПЕРЕМЕННЫХ**
-  ```
-  Example 1:
+  ```C++
+  // Example 1:
   switch (x) {
     case 1:
         std::cout << "  1\n";
@@ -79,7 +79,7 @@ switch (x) {
     	break;
   }
   
-  Example 2:
+  // Example 2:
   switch (x) {
     case 1:
         std::cout << "  1\n";
@@ -100,7 +100,7 @@ switch (x) {
   Компилятор будет ругаться, если переменная объявлена не в последнем кейсе (`Ex 2`), так как мы будем перепрыгивать через них.
   
   Чтобы с этим бороться, надо написать фигурные скобки: 
-  ```
+  ```C++
   switch (x) {
     case 1:
         std::cout << "  1\n";
