--- a/must-have/Основные_конструкции_языков.md
+++ b/must-have/Основные_конструкции_языков.md
@@ -121,3 +121,22 @@ switch (x) {
   ```
 
 ## Циклы `for`, `while`
+**Оператор `for`**
+```C++
+for (действие до начала цикла;
+     условие продолжения цикла;
+     действия в конце каждой итерации цикла) {
+        инструкция цикла 1;    
+        инструкция цикла 2;
+        ...
+        инструкция цикла N;
+}
+```
+
+**Оператор `while`**
+```C++
+while (условие) {
+    тело цикла;
+}
+```
+Будет выполняться, пока условие истинно
