--- a/must-have/Функции.md
+++ b/must-have/Функции.md
@@ -1,6 +1,14 @@
 ## Объявление и определение функции
+`Объявление функции` - информирует компилятор о названии функции, возвращаемом типе и аргументах. Если функция не возвращает значение, указывается тип вовзрата `void`
+
+`Определение функции` - содержит алгоритм, который будет выполнен при вызове функции. Оператор `return` указывает значение, которое будет возвращаться
 
 ## Вызов функции 
+```C++
+func_name();
+func_name(arg1, arg2);
+```
+Если у функции есть параметры по умолчанию `C++ void foo(int n = 0)`, их можно не передавать 
 
 ## Возвращаемое значение
 
