--- a/must-have/Функции.md
+++ b/must-have/Функции.md
@@ -8,7 +8,7 @@
 func_name();
 func_name(arg1, arg2);
 ```
-Если у функции есть параметры по умолчанию `C++ void foo(int n = 0)`, их можно не передавать 
+Если у функции есть параметры по умолчанию ```C++ void foo(int n = 0)```, их можно не передавать 
 
 ## Возвращаемое значение
 
