--- a/must-have/Функции.md
+++ b/must-have/Функции.md
@@ -1,15 +1,24 @@
 ## Объявление и определение функции
-`Объявление функции` - информирует компилятор о названии функции, возвращаемом типе и аргументах. Если функция не возвращает значение, указывается тип вовзрата `void`
+`Объявление функции` - информирует компилятор о названии функции, возвращаемом типе и аргументах.
 
-`Определение функции` - содержит алгоритм, который будет выполнен при вызове функции. Оператор `return` указывает значение, которое будет возвращаться
-
+`Определение функции` - содержит алгоритм, который будет выполнен при вызове функции.
 ## Вызов функции 
 ```C++
 func_name();
 func_name(arg1, arg2);
 ```
-Если у функции есть параметры по умолчанию ```C++ void foo(int n = 0)```, их можно не передавать 
+Если у функции есть параметры по умолчанию, их можно не передавать 
 
 ## Возвращаемое значение
+Оператор `return` указывает значение, которое будет возвращаться. Если функция не возвращает значение, указывается тип вовзрата `void`
 
 ## Рекурсивный вызов
+`Рекурсия` - определение функции через саму себя
+```
+int fib(int n) {
+    if (n == 0 || n == 1) {
+        return 1;
+    }
+    return fib(n - 1) + fib(n - 2);
+}
+```
