--- a/must-have/Основные_конструкции_С++.md
+++ b/must-have/Основные_конструкции_С++.md
@@ -1,8 +1,27 @@
 ## Синтаксис `static_cast`
+```C++
+static_cast< new_type > ( expr )
+```
+Меняет тип того, что в круглых скобочках на тип того, что в угловых скобочках (каст элемента одного типа к другому)
 
 ## Синтаксис объявления пространств имён, обращения к элементу внутри пространства имён
+```C++
+namespace bank {
+    void get_mone() {};
+}
+
+bank::get_money();
+```
 
 ## `auto` для объявления переменных
+```C++
+auto инициализатор декларатора;
+
+auto a{42};
+auto b = 0;
+auto c = {3.14156};
+auto d(1.41421f);
+```
 
 ## `range-based for`, в том числе с `auto&` и `const auto&`
 
