--- a/must-have/Основные_конструкции_С++.md
+++ b/must-have/Основные_конструкции_С++.md
@@ -24,5 +24,17 @@ auto d(1.41421f);
 ```
 
 ## `range-based for`, в том числе с `auto&` и `const auto&`
+```C++
+for (auto &i : v) {
+    ...
+}
+
+for (const auto &i : v) {
+    ...
+}
+```
+Мы обычно используем, чтобы ходить по элементам контейнера без обращения к их индексам.
+
+Но есть и другие конструкции, подробнее [тут](https://en.cppreference.com/w/cpp/language/range-for)
 
 ## Синтаксис шаблонов, достаточный для написания минимального адаптера `stack<T>` поверх `deque`
