--- a/must-have/Основные_конструкции_С++.md
+++ b/must-have/Основные_конструкции_С++.md
@@ -38,3 +38,31 @@ for (const auto &i : v) {
 Но есть и другие конструкции, подробнее [тут](https://en.cppreference.com/w/cpp/language/range-for)
 
 ## Синтаксис шаблонов, достаточный для написания минимального адаптера `stack<T>` поверх `deque`
+```C++
+template<typename T> 
+структура/функция
+```
+
+### `stack<T>` поверх `deque`
+```C++
+template<typename T>
+class stack {
+private:
+    std::deque<T> st;
+    
+public:
+    stack() = default;
+    
+    void push_back(T other) & {
+        st.push_back(other);
+    }
+    
+    void pop_back() {
+        st.pop_back();
+    }
+    
+    T &top_back() & {
+        return st.back();
+    }
+};
+```
