--- a/must-have/Классы.md
+++ b/must-have/Классы.md
@@ -1,7 +1,28 @@
 ## Определение класса, конструктор, деструктор, методы
+`Класс` - пользовательский тип данных
+
+`Метод класса` - функции, определенные внутри класса
+
+`Конструктор` - метод класса, вызывающийся при создании объекта
+
+`Деструктор` - метод, вызывающийся при удалении объекта
 
 ## Специальные методы (пять штук), правило нуля, правило пяти
+`Пять специальных методов`
+* Конструктор копирования
+* Конструктор перемещения
+* Оператор копирования
+* Оператор перемещения
+* Деструктор
+
+`Правило пяти` - если в классе потребовалось определить какой-то из специальных методов, то, скорее всего, потребуется определить все пять
+
+`Правило нуля` - не определять никакой из пяти специальных методов, поручить это компилятору. Для владения ресурсами использовать умные указатели вместо обычных
 
 ## Приватные/защищённые/публичные поля и методы
+В С++ есть 3 уровня доступа:
+* `public` - доступ к членам даже извне класса
+* `protected` - доступ только для дружественных и дочерних классов
+* `public` - доступ имеют только другие члены этого класса
 
 ## Наследование: базовый синтаксис, включая вызов конструктора базового класса
