--- a/must-have/Классы.md
+++ b/must-have/Классы.md
@@ -26,3 +26,12 @@
 * `public` - доступ имеют только другие члены этого класса
 
 ## Наследование: базовый синтаксис, включая вызов конструктора базового класса
+```C++
+struct Base { // Базовый класс
+    int x = 10;
+};
+
+struct Derived : Base { // Дочерний класс
+    int y = 20;
+};
+```
