--- a/must-have/Классы.md
+++ b/must-have/Классы.md
@@ -33,5 +33,8 @@ struct Base { // Базовый класс
 
 struct Derived : Base { // Дочерний класс
     int y = 20;
+    
+    Derived() : Base() { // Вызов конструктора базового класса
+    }
 };
 ```
