--- a/must-have/Классы.md
+++ b/must-have/Классы.md
@@ -38,3 +38,4 @@ struct Derived : Base { // Дочерний класс
     }
 };
 ```
+Когда вызываем конструктор наследника важно сначала сконструировать базовый класс, для этого вызываем его конструктор в листе инициализации
