--- a/must-have/Исключения.md
+++ b/must-have/Исключения.md
@@ -77,5 +77,45 @@ int main() {
 Если принимать не по ссылке, то будет slicing и метод `what()` будет уже чем-то непонятным. Более того, `std::exception` - это полиморфный класс, его лучше не ловить по значению.
 
 ## exception safety: определения no/basic/strong/nothrow
+#### no safety
+Если вылетело исключение, у программы может возникнуть некорректное состояние (утечки памяти, нарушение инвариантов)
+```C++
+foo *x = new foo[2];
+do_smth();
+delete[] x;
+```
+В `do_smth()` вылетело исключение и произойдет утечка памяти, так как не вызвали `delete[]`
+
+#### basic
+Отсутствие утечек ресурсов и сохранение инвариантов класса
+```C++
+struct WeirdObject {
+    WeirdObject() {}
+    WeirdObject(WeirdObject &&) {}
+    WeirdObject & operator=(WeirdObject &&) { return *this; }
+    WeirdObject(const WeirdObject &) = delete;
+    WeirdObject & operator=(const WeirdObject &) = delete;
+};
+
+int main(){
+    std::vector<WeirdObject> a(1'000'000);
+    a.push_back(20); // Если вылетело исключение, то вектор 'a' уже мог измениться
+	assert(a.size() == 1'000'000 || a.size() == 1'000'001); // Может быть неверно из-за базовой гарантии.ы
+}
+```
+
+#### strong
+Исключение вылетает, но состояние программы от этого не меняется.
+```C++
+std::vector<int> a(1'000'000);
+a.push_back(20);  // Если не получилось, то вектор 'a' не изменился
+```
+
+#### nothrow
+Код никогда не кидает исключения
+```C++
+int a = 10, b = 20;
+a = b;
+```
 
 ## Умение добавить базовую гарантию в произвольный код при помощи автоматических выполняемых деструкторов
