--- a/must-have/Исключения.md
+++ b/must-have/Исключения.md
@@ -100,7 +100,7 @@ struct WeirdObject {
 int main(){
     std::vector<WeirdObject> a(1'000'000);
     a.push_back(20); // Если вылетело исключение, то вектор 'a' уже мог измениться
-	assert(a.size() == 1'000'000 || a.size() == 1'000'001); // Может быть неверно из-за базовой гарантии.ы
+    assert(a.size() == 1'000'000 || a.size() == 1'000'001); // Может быть неверно из-за базовой гарантии
 }
 ```
 
