--- a/must-have/Исключения.md
+++ b/must-have/Исключения.md
@@ -129,6 +129,8 @@ a = b;
     std::unique_ptr<T[]> p(new T[3]);
 } // calls ~T 3 times
 
+
+// new/delete с unique_ptr
 {
     std::unique_ptr<T, std::function<void(T*)>> p(new T, [](T* ptr) {
         std::cout << "destroying from a custom deleter...\n";
