--- a/must-have/Исключения.md
+++ b/must-have/Исключения.md
@@ -121,20 +121,24 @@ a = b;
 ## Умение добавить базовую гарантию в произвольный код при помощи автоматических выполняемых деструкторов
 Вместо выделения памяти руками через `new` лучше использовать `unique_ptr`, тогда если вылетит исключение он освободит память в деструкторе.
 ```C++
-{
-    std::unique_ptr<T> p = std::make_unique<T>();
-} // calls ~T 1 time
+int main() {
+    try {
+        int *x = new int(10); // Should be unique_ptr.
+        foo(); // Код, бросающий исключение
+        delete x;
+    } catch (const std::exception &err) {
+        std::cout << "Exception caught: " << err.what() << "\n";
+    }
+}
 
-{
-    std::unique_ptr<T[]> p(new T[3]);
-} // calls ~T 3 times
+МЕНЯЕМ НА
 
-
-// new/delete с unique_ptr
-{
-    std::unique_ptr<T, std::function<void(T*)>> p(new T, [](T* ptr) {
-        std::cout << "destroying from a custom deleter...\n";
-        delete ptr;
-    });  // p owns T
-} // the lambda above is called and D is destroyed
+int main() {
+    try {
+        std::unique_ptr<int> p = std::make_unique<int>();
+        foo(); // Код, бросающий исключение
+    } catch (const std::exception &err) {
+        std::cout << "Exception caught: " << err.what() << "\n";
+    }
+}
 ```
