--- a/must-have/Исключения.md
+++ b/must-have/Исключения.md
@@ -142,3 +142,10 @@ int main() {
     }
 }
 ```
+
+```C++
+FILE *f = fopen("a.txt", "r");
+do_something(f);  // может выкинуть исключение
+fclose(f);
+```
+Стоит завернуть f в класс с деструктором, чтобы обеспечить базовую гарантию. Подробнее [тут](https://github.com/hse-spb-2020-cpp/practice-suvorov/blob/master/20-210304/01-c-io/03-c-io-raii-exception.cpp)
