--- a/must-have/Си.md
+++ b/must-have/Си.md
@@ -69,6 +69,11 @@ int main() {
 }
 ```
 
+#### `std::string`
+Это обёртка над сишными строками, которые умеют больше и сами следят за строкой, её размером и тд. Но можно попросить у `std::string` и сишную строку.
+* `std::string::c_str()` - вернет копию строчки
+* `std::string::data()` - вернет константный указатель на начало строки
+
 ## Операции со строками в стиле Си: конкатенция, получение длины, безопасная альтернатива для `gets` и `scanf("%s")`
 
 ## Массивы массивов в языке Си (вроде `int**`): выделение, освобождение, использование
