--- a/must-have/Си.md
+++ b/must-have/Си.md
@@ -10,6 +10,10 @@ std::cout << str << "\n";
 ```
 Если в конце не будет `\0` символа - `UB`
 
+`char s[]` - массив байт
+
+`char *s` - указатель на массив байт (не обязательно начало)
+
 Если хранится массив `char`, то можем быстро записывать в файл и читать из него эту информацию. Но с `char*` такое уже не прокатит. Тк просто запишутся указатели да память для этого конкретного файла. Аналогично будет и для `std::string`
 ```C++
 struct Person {
