--- a/must-have/Си.md
+++ b/must-have/Си.md
@@ -79,6 +79,64 @@ int main() {
 * `std::string::data()` - вернет константный указатель на начало строки
 
 ## Операции со строками в стиле Си: конкатенция, получение длины, безопасная альтернатива для `gets` и `scanf("%s")`
+#### Конкатенация
+```C++
+/*
+    char* a = "hello ";
+    const char* b = "world";
+    std::cout << (a + b) << "\n";
+*/
+//но так можно
+std::cout << ("Hello" " World") << "\n";  // Костыль на этапе компиляции(!).
+                                               // Только для литералов.
+// std::cout << (a b) << "\n";             // Так тоже нельзя
+
+void my_strcat(char *a, const char *b) {
+    int a_pos = std::strlen(a);
+    for (int b_pos = 0; b[b_pos]; b_pos++) {
+        std::cout << "b_pos=" << b_pos << "\n";
+        a[a_pos++] = b[b_pos];
+    }
+    a[a_pos] = 0;
+}
+```
+Такой свой конкатенатор вызывает `UB`, потому что никто не гарантировал нам, что в память после этой строки можно еще что-то записывать
+
+Попробуем написать лучше
+```C++
+void my_strcat(char *&a, const char *b) {
+    char *out = new char[strlen(a) + strlen(b) + 1];
+
+    std::strcpy(out, a);
+    std::strcpy(out + strlen(a), b);
+
+    delete[] a;
+    a = out;
+}
+```
+Такой код будет работать, но если создаем строку не через new, это работать не будет
+```C++
+// ОК, но очень странно выглядит.
+char *a = new char[6];
+std::strcpy(a, "hello");
+char b[] = " world";
+my_strcat(a, b);
+// my_strcat(a + 1, b);  // UB: будет delete из середины куска памяти.
+std::cout << a << "\n";
+delete[] a;
+```
+Это `UB`, тк тут удаляем часть массива
+```C++
+char a[] = "hello";
+char b[] = " world";
+char *aptr = a;
+my_strcat(aptr, b);
+std::cout << aptr << "\n";
+```
+
+#### Получение длины
+
+#### Безопасная альтернатива для `gets` и `scanf("%s")`
 
 ## Массивы массивов в языке Си (вроде `int**`): выделение, освобождение, использование
 
