--- a/must-have/Си.md
+++ b/must-have/Си.md
@@ -79,7 +79,7 @@ int main() {
 * `std::string::data()` - вернет константный указатель на начало строки
 
 ## Операции со строками в стиле Си: конкатенция, получение длины, безопасная альтернатива для `gets` и `scanf("%s")`
-#### Конкатенация
+### Конкатенация
 ```C++
 /*
     char* a = "hello ";
@@ -134,9 +134,9 @@ my_strcat(aptr, b);
 std::cout << aptr << "\n";
 ```
 
-#### Получение длины
+### Получение длины
 
-#### Безопасная альтернатива для `gets` и `scanf("%s")`
+### Безопасная альтернатива для `gets` и `scanf("%s")`
 
 ## Массивы массивов в языке Си (вроде `int**`): выделение, освобождение, использование
 
