--- a/must-have/Си.md
+++ b/must-have/Си.md
@@ -79,6 +79,8 @@ int main() {
 * `std::string::data()` - вернет константный указатель на начало строки
 
 ## Операции со строками в стиле Си: конкатенция, получение длины, безопасная альтернатива для `gets` и `scanf("%s")`
+Время жизни строкового литерала - `static`. За ним полностью следит компилятор, это константная память, её изменения запрещены. Поэтому указатели нужны константные.
+
 ### Конкатенация
 ```C++
 /*
@@ -135,8 +137,82 @@ std::cout << aptr << "\n";
 ```
 
 ### Получение длины
+```C++
+char arr[] = "Hello World";
+std::cout << std::strlen(arr) << "\n";      // 11
+std::cout << std::strlen(arr + 3) << "\n";  // 8
+
+// реализация
+auto my_strlen = [&](const char *s){
+    int len = 0;
+    while (s[len] != 0) {
+      len++;
+    }
+    return len;
+};
+
+std::cout << my_strlen(arr) << "\n";        // 11
+std::cout << my_strlen(arr + 3) << "\n";    // 8
+```
 
 ### Безопасная альтернатива для `gets` и `scanf("%s")`
+#### `gets`
+`gets` считывает строчку из стандартного потока ввода
+```C++
+char command[10];   //команда максимум из 9 символов
+gets(command);  // Может случиться переполнение буфера (buffer overflow).
+// Top-1 уязвимостей в мире: https://ulearn.me/course/hackerdom/Perepolnenie_steka_3bda1c2c-c2a1-4fb0-9146-fccc47daf93b
+```
+Чтобы не было переполнения буффера, ограничим его - воспользуемся `fgets` (но строка обрежется, если она будет больше, чем мы указали)
+```C++
+char command[10];
+std::fgets(command, sizeof command, stdin);  // Всегда делает null-terminated строчку.
+                                             // Обрезает ввод.
+// Плюсовый std::string не обрезает, но может слопать всю память :(
+```
+
+#### `scanf("%s")`
+`scanf` - ввода общего назначения, считывающей данные из пото­ка stdin. Она может считывать данные всех базовых типов и автоматически конвертировать их в нужный внутренний формат.
+* %с Считать один символ
+* %d Считать десятичное число целого типа
+* %i Считать десятичное число целого типа
+* %е Считать число с плавающей запятой
+* %f Считать число с плавающей запятой
+* %g Считать число с плавающей запятой
+* %о Считать восьмеричное число
+* %s Считать строку
+* %х Считать шестнадцатиричное число
+* %р Считать указатель
+* %n Принимает целое значение, равное количеству считанных до текущего момента символов
+* %u Считывает беззнаковое целое
+* %[] Просматривает набор символов
+* %% Считывает символ %
+
+Может возникнуть `UB`
+```C++
+{
+    char buf[5];
+    int cnt = scanf("%s", buf);  // Potentially UB
+    printf("cnt=%d, buf=|%s|\n", cnt, buf);
+}
+{
+    char buf[5];
+    int x;
+    int cnt = scanf("%4s%d", buf, &x);  // No UB, will stop reading after 4 bytes.
+    printf("cnt=%d, buf=|%s|, x=%d\n", cnt, buf, x);
+}
+```
+Пример задачки
+```C++
+char s[10];
+int x, y;
+scanf("%d%s%d", &x, s, &y);  // Как исправить возможное UB? Как выглядит ввод, на котором это UB проявится?
+
+// Решение
+char s[10];
+int x, y;
+scanf("%d%9s%d", &x, s, &y);  // UB мог возникнуть если строка будет длинее 9 символов
+```
 
 ## Массивы массивов в языке Си (вроде `int**`): выделение, освобождение, использование
 
