--- a/must-have/Си.md
+++ b/must-have/Си.md
@@ -209,9 +209,10 @@ int x, y;
 scanf("%d%s%d", &x, s, &y);  // Как исправить возможное UB? Как выглядит ввод, на котором это UB проявится?
 
 // Решение
+// UB мог возникнуть если строка будет длинее 9 символов
 char s[10];
 int x, y;
-scanf("%d%9s%d", &x, s, &y);  // UB мог возникнуть если строка будет длинее 9 символов
+scanf("%d%9s%d", &x, s, &y);
 ```
 
 ## Массивы массивов в языке Си (вроде `int**`): выделение, освобождение, использование
