--- a/must-have/Си.md
+++ b/must-have/Си.md
@@ -216,4 +216,68 @@ scanf("%d%9s%d", &x, s, &y);
 ```
 
 ## Массивы массивов в языке Си (вроде `int**`): выделение, освобождение, использование
+Можно попросить многомерный массив, тогда элементы будут лежать подряд
+```C++
+int arr[3][4][5]{};
+```
+Но можем собрать и ручками. Отсюда несколько эффектов: 
+* Теперь это несколько блоков в памяти, которые могут лежать не подряд
+* Не все массивы должны быть одинаковой длины, мы сами управляем этим
+```C++
+int ***arr2 = new int**[3];
+for (int i = 0; i < 3; i++) {
+    arr2[i] = new int*[4];
+    arr2[i][0] = new int[5];
+    arr2[i][1] = new int[5];
+    arr2[i][2] = new int[5];
+    arr2[i][3] = new int[5];
+}
+arr2[1][2][3] = 123;
+```
+Массивы при передаче в функцию преобразовываются к указателю и теряют размер. Его нужно передавать отдельно.
+```C++
+// void foo(int arr[]) {  // То же самое, что int *arr
+void foo(int arr[15]) {  // То же самое, что int *arr
+    std::cout << sizeof(arr) << "\n"; // 8
+}
+```
+* Просто как многомерный указатель, пропадают требования к размерам, но и самих размеров уже нет
+```C++
+void bar(int ***arr) {
+    std::cout << arr[1][2][3] << "\n";
+}
+```
+* Принимать именно указатель на массив в разных видах
+```C++
+using arr45 = int[4][5];
+// void foo(int arr[3][4][5]) {
+// void foo(int arr[][4][5]) {
+// void foo(int (*arr)[4][5]) {  // What if: (*arr) --> *arr
+void foo(arr45 *arr) {
+    std::cout << arr[1][2][3] << "\n";
+}
+```
+* Можно опять же сделать функцию шаблонной
+```C++
+template<std::size_t N, std::size_t M, std::size_t K>
+void foo2(int (&arr)[N][M][K]) {
+    std::cout << arr[1][2][3] << "\n";
+    std::cout << N << " " << M << " " << K << "\n";
+}
+```
+* В плюсах можно взять ссылку на массив. Тогда будет проверка, что сходятся размеры
+```C++
+void foo_cpp_wtf(int (&arr)[10]) {}  // C++ only, ok
+```
+* Можно функцию сделать шаблонной. Она будет принимать ссылку на массив размера `N`. `N` - шаблонный параметр
+```C++
+template<std::size_t N>
+void foo_cpp_templ(int (&arr)[N]) {
+    std::cout << "N=" << N << "\n";
+}
+```
+
+
+
+
 
