--- a/must-have/Полиморфные_классы.md
+++ b/must-have/Полиморфные_классы.md
@@ -1,8 +1,5 @@
 ## Виртуальные методы и их отличия от невиртуальных
-
-## Необходимость виртуального деструктора
-
-## Чисто виртуальные функции, что происходит при отсутствии `override` или `virtual`
+`Виртуальная функция` — это функция, которая определяется в базовом классе, а любой порожденный класс может ее переопределить.
 ```C++
 struct Base {
     virtual void foo() {
@@ -25,6 +22,40 @@ int main() {
     db.foo(); //вызовется Derived, без virtual вызвалось бы Base
 }
 ```
+Виртуальная функция отличается об обычной функции тем, что для обычной функции связывание вызова функции с ее определением осуществляется на этапе компиляции. Для виртуальных функций это происходит во время выполнения программы.
+
+## Необходимость виртуального деструктора
+### Проблема
+```C++
+struct Human {
+	std::string first_name, last_name; // Possibly wrong.
+	Human(std::string first_name_, std::string last_name_)
+	: first_name(std::move(first_name_)), last_name(std::move(last_name_)) {
+}
+};
+
+struct Student : Human {
+	std::string group; // Possibly wrong.
+	Student(std::string first_name_, std::string last_name_, std::string group_)
+		: Human(std::move(first_name_), std::move(last_name_))
+		, group(std::move(group_)) {}
+};
+
+int main() {
+	Human *h = new Student("Egor", "Suvorov", "MBD191");
+	delete h; // UB: ~Human()
+	// delete static_cast<Student*>(h); // Would be OK.
+}
+```
+`Проблема`: в данном случае вызывается деструктор от `Human`, а нужно вызывать деструктор от `Student`
+
+### Решение - виртуальный деструктор
+```C++
+virtual ~Human() = default;
+```
+Теперь во всех производных классах деструкторы автоматически становятся виртуальными
+
+## Чисто виртуальные функции, что происходит при отсутствии `override` или `virtual`
 
 ## Slicing (срезка объектов) при присваивании полиморфного класса в переменную типа "базовый класс", как защититься (хранить только ссылки/умные указатели)
 
