--- a/must-have/Полиморфные_классы.md
+++ b/must-have/Полиморфные_классы.md
@@ -56,6 +56,24 @@ virtual ~Human() = default;
 Теперь во всех производных классах деструкторы автоматически становятся виртуальными
 
 ## Чисто виртуальные функции, что происходит при отсутствии `override` или `virtual`
+`Чисто виртуальный метод` - у метода нет реализации, ее должен предоставить кто-то из наследников. Если в классе есть виртуальный метод, то класс - `абстрактный` (такой класс обычно не используется сам по себе). Если метод чисто виртуальный, то не перезаписать его (`override`) не страшно (ошибки компиляции не будет), однако если не сделать реализацию в наследнике, то наследник тоже станет абстрактным классом.
+```C++
+struct Base {
+virtual void foo() const = 0; // Base::foo() - чисто виртуальный метод.
+};
+struct Derived : Base {
+// void foo() override {}
+// Так как foo() нет, то Derived::foo() - чисто виртуальный метод.
+// Следствие: Derived - "абстрактный класс".
+};
+void foo(const Base &b) {
+b.foo();
+}
+int main() {
+Derived d; // Запрещено создавать абстрактные классы.
+foo(d);
+}
+```
 
 ## Slicing (срезка объектов) при присваивании полиморфного класса в переменную типа "базовый класс", как защититься (хранить только ссылки/умные указатели)
 
